# backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Workflow.md  docker-compose.yaml  docker-compose.yml  drizzle.config.ts  nuxt.config.ts  package.json  pyproject.toml  requirements.txt  ruff.toml  run.py  test.md
.github/workflows/: docker-publish.yml  ruff.yml  tests.yml
app/: __init__.py  app.css  config.py  routes.py
app/assets/: main.css
app/components/: d-modal.vue  d-pin-input.vue  d-select.vue  d-tag.vue
app/components/d-button/: index.vue
app/components/d-header/: index.vue  title.vue
app/components/d-page/sidebar/: content.vue  index.vue
app/middleware/: auth.global.ts
app/pages/: argumentation-graph.vue  citation-checker.vue  index.vue  login.vue  logout.vue  register.vue
app/pages/papers/: [id].vue
app/types/: models.ts
app/utils/: papers.ts
archive/: README.md  Workflow.md  ruff.toml
archive/app/: config.py
archive/modules/database/migrations/: 20250202145000_set_up_paper_embeddings.UP.sql  20250202150400_set_up_search_index.UP.nontx.sql  20250313102000_paper_references.up.sql  20250320215200_add_content_collumn_paper.up.sql  README.md
archive/modules/ollama/: pydantic_classes.py
archive/modules/retriever/arxiv/: arxiv_retriever.py
archive/modules/storage/: storage.py
archive/scripts/: check_db.py  seed.py  setup.sh
archive/tests/: test_routes.py
backend/: .gitignore  README.md  docker-compose.yml  requirements.txt  ruff.toml  setup.sh  setup_with_samples.sh
backend/database/: create_bucket.py  docker-compose.yml  insert_paper_demo.py  run_migrations.py  test_database.py
backend/database/migrations/: 20250110115300_init.up.sql  README.md
frontend/: README.md  bun.lockb  package.json
frontend/app/: root.tsx
frontend/app/routes/: home.tsx
modules/Retriever/arxiv/: arxiv_retriever.py
modules/database/: database.py
modules/database/migrations/: 20250221173300_fix_paper_embeddings_constraints.UP.sql  20250227142600_add_paper_metadata_fields.up.sql  20250320215200_add_referenced_paper_id_collumn_paper_references.up.sql
modules/latex_parser/: README.md  latex_content_parser.py  main.py  pbcopy  reference_parser.py
modules/ollama/: main.py  ollama.py  ollama_client.py  pdf_extractor.py  pydantic_classes.py
modules/retriever/arxiv/: arxiv_retriever.py  main.py
modules/retriever/arxiv/Papers/: references_extracted.json
modules/retriever/arxiv/Papers/1706.03762v7.Attention_Is_All_You_Need/: references_extracted.json
modules/retriever/arxiv/Papers/2410.20268v2.Centaur__a_foundation_model_of_human_cognition/: sn-article.tex  sn-bibliography.bib
modules/storage/: storage.py
modules/tests/: test_database.py  test_instructor.py  test_latex_content_parser.py  test_reference_parser.py  test_storage.py
python_modules/latex_parser/: README.md
python_modules/ollama/: README.md
python_modules/tests/: test_arxiv.py  test_ollama.py
scripts/: createBucket.ts  create_bucket.py  run_migrations.py  seed.py  setup.sh  setup_with_samples.sh  test_database.py
server/api/: docs.get.ts  index.get.ts  login.post.ts  openapi.json.get.ts  posts.get.ts  posts.post.ts  register.post.ts
server/api/papers/: [id].delete.ts  [id].get.ts  [id].put.ts  [id].references.get.ts  index.get.ts  index.post.ts
server/api/papers/[id]/: references.get.ts
server/utils/: drizzle.ts  openapi.ts
tests/: conftest.py  test_arxiv.py  test_database.py  test_instructor.py  test_intructor.py  test_ollama.py  test_reference_parser.py  test_routes.py
tests_tmp/: test_instructor.py
(+2 files in other folders)
